--- a/intex2/appsettings.json
+++ b/intex2/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "MummyDBConnection": "Data Source=mummyintexdb.chtyw6mkdxcw.us-east-1.rds.amazonaws.com;Database=MummyDB;User Id=admin;Password=thisistheadminpassword;"
   },
   "Logging": {
     "LogLevel": {
