--- a/intex2/appsettings.json
+++ b/intex2/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "MummyDBConnection": "Data Source=mummyintexdb.chtyw6mkdxcw.us-east-1.rds.amazonaws.com;Database=MummyDB;User Id=admin;Password=thisistheadminpassword;"
+    "MummyDBConnection": "Data Source=mummyintexdb.chtyw6mkdxcw.us-east-1.rds.amazonaws.com;Database=MummyDB;User Id=admin;Password=thisistheadminpassword;",
+    "IdentityConnection": "Data Source=authentication.cr7xsfbvp3dj.us-east-1.rds.amazonaws.com;Database=Identity;User Id=admin;Password=group4-9;"
   },
   "Logging": {
     "LogLevel": {
